# typescripten

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  test_input.c  textbook-run.ans
.cargo/: config.toml
.github/workflows/: build.yml  check.yml  check_formatted.yml
assignment/: figure323.lex  week2.md  week3.md
assignment/tests/: 4.txt  textbook_easy.txt
nix/: build.nix  docker.nix
src/: Cargo.toml  collections.rs  compile.rs  file  main.rs  parse.rs  parser.rs  tests.rs
src/codegen/: ast_to_table.rs  codes.rs  expr_type.rs  mod.rs  table.rs  types.rs
src/compile/: Cargo.toml
src/parse/: Cargo.toml  mod.rs  symbols.rs
src/src/: codes.rs  collections.rs  main.rs  parse.rs  tests.rs  types.rs
src/src/codegen/: Cargo.toml  ast_to_table.rs  codes.rs  expr_type.rs  into_table.rs  mod.rs  table.rs  types.rs
src/src/parse/: into_table.rs  mod.rs  parse.rs  symbols.rs  table.rs  tests.rs
