[dependencies]
clap = {version = "4.5.48", features = ["derive"]}
env_logger = "0.11.8"
log = "0.4.28"
chumsky = {version = "0.11.1", features = ["regex"]}
logos = "0.15.1"
parse = {path = "src/parse"}
codegen = {path = "src/codegen"}
ariadne = "0.6.0"

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[lib]
path = "src/lib.rs"

[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "src/parse", "src/codegen", "src/compile"]
resolver = "2"
